--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -25,7 +24,8 @@
             android:layout_height="40pt"
 
             android:layout_gravity="center"
-            android:background="@drawable/loguito" />
+            android:background="@drawable/loguito"
+            android:contentDescription="@string/logo" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -38,12 +38,13 @@
                 android:layout_height="wrap_content"
 
                 android:layout_marginVertical="10dp"
-                android:layout_marginRight="5dp"
+                android:layout_marginEnd="5dp"
                 android:layout_weight="1"
 
                 android:background="@drawable/roundstyle"
                 android:backgroundTint="#BFC6CC"
-                android:hint="Nombre"
+                android:autofillHints="name"
+                android:hint="@string/nombre"
                 android:inputType="text"
                 android:padding="15dp" />
 
@@ -53,14 +54,16 @@
                 android:layout_height="wrap_content"
 
                 android:layout_marginVertical="10dp"
-                android:layout_marginLeft="5dp"
+                android:layout_marginStart="5dp"
                 android:layout_weight="1"
 
                 android:background="@drawable/roundstyle"
                 android:backgroundTint="#BFC6CC"
-                android:hint="Apellidos"
+                android:autofillHints="name"
+                android:hint="@string/apellidos"
                 android:inputType="text"
                 android:padding="15dp" />
+
         </LinearLayout>
 
         <EditText
@@ -71,8 +74,8 @@
             android:layout_marginVertical="10dp"
             android:background="@drawable/roundstyle"
             android:backgroundTint="#BFC6CC"
-
-            android:hint="Email"
+            android:autofillHints="emailAddress"
+            android:hint="@string/email"
             android:inputType="textEmailAddress"
             android:padding="15dp" />
 
@@ -83,8 +86,8 @@
             android:layout_marginVertical="10dp"
             android:background="@drawable/roundstyle"
             android:backgroundTint="#BFC6CC"
-
-            android:hint="Contraseña"
+            android:autofillHints="password"
+            android:hint="@string/contraseña"
             android:inputType="textPassword"
             android:padding="15dp" />
 
@@ -93,12 +96,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:backgroundTint="#664434"
-            android:text="Registrarse" />
+            android:text="@string/registrarse" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-
             android:orientation="vertical">
 
             <CheckBox
@@ -107,19 +109,20 @@
                 android:layout_height="wrap_content"
                 android:background="@color/white"
                 android:padding="20dp"
-                android:text="Acepto los términos y condiciones"
+                android:text="@string/aceptoCondiciones"
                 android:textAlignment="center" />
 
             <TextView
+                android:id="@+id/reLeerCondiciones"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginVertical="5pt"
                 android:background="@color/white"
-                android:text="Leer condiciones de servicio y política de privacidad de Patitas."
+                android:text="@string/leerCondiciones"
                 android:textAlignment="center"
-                android:textColor="#757575"
+                android:textColor="@color/azul"
 
-                android:textSize="14dp"
+                android:textSize="14sp"
                 tools:ignore="TextSizeCheck" />
         </LinearLayout>
 
