--- a/app/src/main/res/layout/activity_ver_lista_refugios.xml
+++ b/app/src/main/res/layout/activity_ver_lista_refugios.xml
@@ -10,7 +10,7 @@
         layout="@layout/toolbar"/>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerGato"
+        android:id="@+id/recyclerRefugio"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 </FrameLayout>
