--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,4 +7,6 @@
     </style>
 
     <style name="Theme.patitasApp" parent="Base.Theme.patitasApp" />
+    <style name="Theme.app" parent="Theme.MaterialComponents.DayNight.NoActionBar"/>
+
 </resources>
