--- a/app/src/main/res/layout/item_refugio.xml
+++ b/app/src/main/res/layout/item_refugio.xml
@@ -26,16 +26,16 @@
         app:layout_constraintStart_toEndOf="@+id/ivRefugio"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/tvRefugioDireccion"
+    <Button
+        android:id="@+id/btnFichaR"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:paddingTop="15dp"
+        android:layout_marginEnd="10dp"
+        android:backgroundTint="#fc9c34"
 
-        android:textSize="30sp"
-        app:layout_constraintStart_toEndOf="@+id/tvRefugioNombre"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        android:text="@string/flechita"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvRefugioNombre" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
