--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
     <item
         android:id="@+id/item_listado"
         android:title="@string/boton_listado"
-        app:showAsAction="never" />
-
+        app:showAsAction="ifRoom"/>
     <item
         android:id="@+id/item_listado_Refugios"
         android:title="@string/boton_Refugios"
-        app:showAsAction="never" />
+        app:showAsAction="ifRoom"/>
+
 
 </menu>
