--- a/app/src/main/res/layout/activity_ficha.xml
+++ b/app/src/main/res/layout/activity_ficha.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center"
-    android:background="@drawable/fondoapp">
+    android:background="@drawable/fondoapp"
+    android:orientation="vertical">
+
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar" />
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,7 +24,8 @@
             android:id="@+id/txGato"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:layout_marginHorizontal="20pt" />
+            android:layout_marginHorizontal="20pt"
+            android:contentDescription="@string/gato" />
 
         <TextView
             android:id="@+id/txNombre"
@@ -46,7 +50,7 @@
                     android:id="@+id/palabraRaza"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Raza: "
+                    android:text="@string/pRaza"
                     android:textColor="#433E3E"
                     android:textSize="20sp"
                     android:textStyle="bold" />
@@ -72,7 +76,7 @@
                     android:id="@+id/palabraEdad"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:text="Edad: "
+                    android:text="@string/pEdad"
                     android:textColor="#433E3E"
                     android:textSize="20sp"
                     android:textStyle="bold" />
@@ -96,7 +100,7 @@
                     android:id="@+id/palabraSexo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Sexo: "
+                    android:text="@string/pSexo"
                     android:textColor="#433E3E"
                     android:textSize="20sp"
                     android:textStyle="bold" />
