--- a/app/src/main/res/layout/activity_ficha_refugio.xml
+++ b/app/src/main/res/layout/activity_ficha_refugio.xml
@@ -3,8 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="center"
     android:background="@drawable/fondoapp">
+
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar"/>
 
     <LinearLayout
         android:layout_width="match_parent"
