--- a/app/src/main/res/layout/activity_ver_lista.xml
+++ b/app/src/main/res/layout/activity_ver_lista.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Gato.VerLista">
+    tools:context=".gato.VerLista">
 
     <include
         android:id="@+id/toolbar"
