--- a/app/src/main/res/layout/activity_ver_lista_refugios.xml
+++ b/app/src/main/res/layout/activity_ver_lista_refugios.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Gato.VerLista">
+    tools:context=".gato.VerLista">
 
     <include
         android:id="@+id/toolbar"
@@ -11,6 +11,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerRefugio"
+        android:layout_marginTop="60dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 </FrameLayout>
