--- a/app/src/main/res/layout/activity_ver_lista_usuarios.xml
+++ b/app/src/main/res/layout/activity_ver_lista_usuarios.xml
@@ -10,7 +10,7 @@
         layout="@layout/toolbar"/>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerRefugio"
+        android:id="@+id/recyclerUsuario"
         android:layout_marginTop="60dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
