--- a/app/src/main/res/layout/activity_codigo.xml
+++ b/app/src/main/res/layout/activity_codigo.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,7 +7,7 @@
     android:gravity="center"
     android:orientation="vertical"
     android:visibility="visible"
-    tools:context=".MainActivity">
+    tools:context=".Login">
 
     <LinearLayout
         android:layout_width="355dp"
@@ -23,7 +22,7 @@
             android:id="@+id/reLogo"
             android:layout_width="47pt"
             android:layout_height="40pt"
-
+            android:contentDescription="@string/logo"
             android:layout_gravity="center"
             android:background="@drawable/loguito" />
 
@@ -36,7 +35,7 @@
             android:background="@drawable/roundstyle"
             android:padding="10dp"
 
-            android:text="Ingrese el código enviado a su email"
+            android:text="@string/ingresecodigoemail"
             android:textAlignment="center"
             android:textAllCaps="false"
             android:textSize="18sp" />
@@ -54,8 +53,7 @@
                 android:layout_marginVertical="10dp"
                 android:background="@drawable/roundstyle"
                 android:backgroundTint="#BFC6CC"
-
-                android:hint="_"
+                android:hint="@string/guionbajo"
                 android:inputType="number"
                 android:padding="15dp" />
 
@@ -67,7 +65,7 @@
                 android:background="@drawable/roundstyle"
                 android:backgroundTint="#BFC6CC"
 
-                android:hint="_"
+                android:hint="@string/guionbajo"
                 android:inputType="number"
                 android:padding="15dp" />
 
@@ -79,7 +77,7 @@
                 android:background="@drawable/roundstyle"
                 android:backgroundTint="#BFC6CC"
 
-                android:hint="_"
+                android:hint="@string/guionbajo"
                 android:inputType="number"
                 android:padding="15dp" />
 
@@ -91,7 +89,7 @@
                 android:background="@drawable/roundstyle"
                 android:backgroundTint="#BFC6CC"
 
-                android:hint="_"
+                android:hint="@string/guionbajo"
                 android:inputType="number"
                 android:padding="15dp" />
 
@@ -103,7 +101,7 @@
                 android:background="@drawable/roundstyle"
                 android:backgroundTint="#BFC6CC"
 
-                android:hint="_"
+                android:hint="@string/guionbajo"
                 android:inputType="number"
                 android:padding="15dp" />
         </LinearLayout>
@@ -113,7 +111,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:backgroundTint="#664434"
-            android:text="Continuar" />
+            android:text="@string/continuar" />
 
     </LinearLayout>
 
