--- a/app/src/main/res/layout/activity_codigo.xml
+++ b/app/src/main/res/layout/activity_codigo.xml
@@ -44,6 +44,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+
             android:orientation="horizontal">
 
             <EditText
@@ -51,6 +52,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="10dp"
+                android:layout_marginHorizontal="8dp"
+
                 android:background="@drawable/roundstyle"
                 android:backgroundTint="#BFC6CC"
                 android:hint="@string/guionbajo"
@@ -62,6 +65,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="10dp"
+                android:layout_marginHorizontal="8dp"
                 android:background="@drawable/roundstyle"
                 android:backgroundTint="#BFC6CC"
 
@@ -74,6 +78,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="10dp"
+                android:layout_marginHorizontal="8dp"
                 android:background="@drawable/roundstyle"
                 android:backgroundTint="#BFC6CC"
 
@@ -86,6 +91,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="10dp"
+                android:layout_marginHorizontal="8dp"
                 android:background="@drawable/roundstyle"
                 android:backgroundTint="#BFC6CC"
 
@@ -98,6 +104,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="10dp"
+                android:layout_marginHorizontal="8dp"
                 android:background="@drawable/roundstyle"
                 android:backgroundTint="#BFC6CC"
 
