--- a/app/src/main/res/layout/activity_ficha.xml
+++ b/app/src/main/res/layout/activity_ficha.xml
@@ -3,7 +3,7 @@
 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/fondoapp"
+    android:background="@drawable/fondoficharedondo"
     android:orientation="vertical">
 
     <include
@@ -13,10 +13,9 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="403dp"
+        android:layout_height="600dp"
         android:layout_margin="15pt"
-        android:background="@drawable/roundstyle"
-        android:backgroundTint="@color/white"
+
         android:orientation="vertical"
         android:padding="10pt">
 
@@ -25,16 +24,19 @@
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:layout_marginHorizontal="20pt"
-            android:contentDescription="@string/gato" />
+            android:contentDescription="@string/gato"
+            android:layout_marginBottom="80dp"
+            />
 
         <TextView
             android:id="@+id/txNombre"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAlignment="center"
-            android:textColor="#000000"
+            android:textColor="#433E3E"
             android:textSize="40sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:layout_marginBottom="20dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
