--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/fondoapp"
+    android:background="@color/white"
     android:gravity="center"
     android:orientation="vertical"
     android:visibility="visible"
@@ -21,11 +21,11 @@
 
         <ImageView
             android:id="@+id/reLogo"
-            android:layout_width="47pt"
-            android:layout_height="40pt"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
 
             android:layout_gravity="center"
-            android:background="@drawable/loguito"
+            android:background="@drawable/icotoolbar"
             android:contentDescription="@string/logo" />
 
         <LinearLayout
@@ -96,7 +96,7 @@
             android:id="@+id/reRegistrarse"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTint="#664434"
+            android:backgroundTint="@color/beige"
             android:text="@string/registrarse" />
 
         <LinearLayout
@@ -107,7 +107,7 @@
             <CheckBox
                 android:id="@+id/reAceptar"
                 android:button="@null"
-                android:drawableLeft="@drawable/checkbox"
+                android:drawableStart="@drawable/checkbox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingVertical="20dp"
@@ -124,7 +124,7 @@
                 android:paddingBottom="20dp"
                 android:text="@string/leerCondiciones"
                 android:textAlignment="center"
-                android:textColor="@color/azul"
+                android:textColor="@color/marronOscuro"
 
                 android:textSize="14sp"
                 tools:ignore="TextSizeCheck" />
