--- a/app/src/main/res/layout/activity_ver_lista.xml
+++ b/app/src/main/res/layout/activity_ver_lista.xml
@@ -3,15 +3,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".gato.VerListaGatos">
+
+    tools:context=".gato.VerListaGatos"
+    android:background="@color/rosita"
+    >
 
     <include
         android:id="@+id/toolbar"
         layout="@layout/toolbar"/>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerGato"
-        android:layout_marginTop="60dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerGato"
+                android:layout_marginTop="70dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                 />
+
 </FrameLayout>
+
+
