--- a/app/src/main/res/layout/item_gato.xml
+++ b/app/src/main/res/layout/item_gato.xml
@@ -1,11 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:contentDescription="@string/app_name"
-    android:padding="5dp">
+    android:background="@color/crema"
+    app:cardCornerRadius="20dp"
+    app:cardElevation="3dp"
+    app:cardUseCompatPadding="true">
 
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="4dp">
     <ImageView
         android:id="@+id/ivGato"
         android:layout_width="150dp"
@@ -21,22 +31,21 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:paddingTop="15dp"
-
+        android:layout_toEndOf="@id/ivGato"
         android:textSize="30sp"
         app:layout_constraintStart_toEndOf="@+id/ivGato"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/btnFicha"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
-        android:backgroundTint="#fc9c34"
+            <Button
+                android:id="@+id/btnFicha"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="100dp"
+                android:layout_marginEnd="10dp"
+                android:backgroundTint="@color/beige"
+                android:text="@string/flechita"
+                tools:ignore="RelativeOverlap,TextContrastCheck" />
+        </RelativeLayout>
 
-        android:text="@string/flechita"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvGatoNombre" />
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
