--- a/app/src/main/res/layout/item_refugio.xml
+++ b/app/src/main/res/layout/item_refugio.xml
@@ -1,41 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+
     android:contentDescription="@string/app_name"
-    android:padding="5dp">
+    android:padding="5dp"
+    android:background="@color/crema"
+    app:cardCornerRadius="20dp"
+    app:cardElevation="3dp"
+    app:cardUseCompatPadding="true">
+
+
+     <RelativeLayout
+         android:layout_width="match_parent"
+         android:layout_height="wrap_content"
+         android:orientation="horizontal"
+         android:padding="2dp">
 
     <ImageView
         android:id="@+id/ivRefugio"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_marginStart="10dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="30dp"
         android:contentDescription="@string/app_name"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/tvRefugioNombre"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:paddingTop="15dp"
+         />
 
-        android:textSize="30sp"
-        app:layout_constraintStart_toEndOf="@+id/ivRefugio"
-        app:layout_constraintTop_toTopOf="parent" />
+         <TextView
+             android:id="@+id/tvRefugioNombre"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_marginStart="16dp"
+             android:layout_toEndOf="@+id/ivRefugio"
+             android:maxWidth="200dp"
+             android:paddingTop="35dp"
+             android:textSize="20sp"
+             app:layout_constraintStart_toEndOf="@+id/ivRefugio"
+             app:layout_constraintTop_toTopOf="parent"
+             android:layout_alignParentEnd="true"/>
 
-    <Button
-        android:id="@+id/btnFichaR"
+         <Button
+        android:id="@+id/btnFicha"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="10dp"
-        android:backgroundTint="#fc9c34"
-
+        android:backgroundTint="@color/beige"
         android:text="@string/flechita"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvRefugioNombre" />
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="100dp"
+        android:layout_marginBottom="10dp"
+        />
+   </RelativeLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
