--- a/app/src/main/res/layout/item_usuario.xml
+++ b/app/src/main/res/layout/item_usuario.xml
@@ -12,12 +12,34 @@
             android:orientation="horizontal">
 
             <TextView
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/nombre"
+                android:textColor="#433E3E"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <TextView
+
                 android:id="@+id/tvUsuarioNombre"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:paddingTop="15dp"
                 android:textSize="20sp" />
+        </LinearLayout>
+    <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/apellidos"
+                android:textColor="#433E3E"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/tvUsuarioApellido"
@@ -34,6 +56,13 @@
             android:orientation="horizontal">
 
             <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/email"
+                android:textColor="#433E3E"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+            <TextView
                 android:id="@+id/tvUsuarioEmail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -46,7 +75,13 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal">
-
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/contraseña"
+                android:textColor="#433E3E"
+                android:textSize="20sp"
+                android:textStyle="bold" />
             <TextView
                 android:id="@+id/tvUsuarioContra"
                 android:layout_width="wrap_content"
