--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -3,9 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/marronClaro"
-    android:elevation="8dp"
-    android:layout_marginBottom="15dp">
+    android:background="@color/beige"
+    android:elevation="5dp"
+    android:layout_marginBottom="15dp"
+    >
 
 
 </androidx.appcompat.widget.Toolbar>
