Cambio de diseño y funcionalidades

--- a/app/src/main/res/layout/item_refugio.xml
+++ b/app/src/main/res/layout/item_refugio.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
 
@@ -42,16 +43,16 @@
              android:layout_alignParentEnd="true"/>
 
          <Button
-        android:id="@+id/btnFicha"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
-        android:backgroundTint="@color/beige"
-        android:text="@string/flechita"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="100dp"
-        android:layout_marginBottom="10dp"
-        />
+             android:id="@+id/btnFicha"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_alignParentEnd="true"
+             android:layout_marginTop="100dp"
+             android:layout_marginEnd="10dp"
+             android:layout_marginBottom="10dp"
+             android:backgroundTint="@color/beige"
+             android:text="@string/flechita"
+             tools:ignore="TextContrastCheck" />
    </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
