--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,6 @@
     <color name="rosita">#e4c5c4</color>
     <color name="beige">#c8ad8d</color>
    <color name="crema">#f5f0ec</color>
+    <color name="grisMasOscuro">#1f1e1d</color>
 
 </resources>
