--- a/app/src/main/res/menu/menu_lista_gatos.xml
+++ b/app/src/main/res/menu/menu_lista_gatos.xml
@@ -6,6 +6,10 @@
         android:id="@+id/item_listado_Refugios"
         android:title="@string/boton_Refugios"
         />
+    <item
+        android:id="@+id/item_PRUEBA"
+        android:title="PRUEBA"
+        />
 
 
 
